--- a/ode_food_poll/composer.json
+++ b/ode_food_poll/composer.json
@@ -8,6 +8,7 @@
     ],
     "require": {
         "php": "^5.5.0",
-        "abraham/twitteroauth": "0.3.0-beta" 
+        "abraham/twitteroauth": "0.3.0-beta" ,
+        "ext-mysqli": "*"
     }
 }
